--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         </h1><!-- /.navbar-header -->
         <nav class="navbar-collapse collapse" id="navigation" role="navigation">
           <ul class="nav navbar-nav">
-            <li><a href="#news">NEWS</a></li>
-            <li><a href="#pick">PICK UP</a></li>
-            <li><a href="#">ONLINE SHOP</a></li>
-            <li><a href="#">CONCEPT</a></li>
+            <li><a href="#news">新着</a></li>
+            <li><a href="#pick">特集</a></li>
+            <li><a href="#">オンラインショップ</a></li>
+            <li><a href="#">コンセプト</a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">SHOP LIST <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">店頭販売店舗 <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="#">新潟 ヘアサロン kiki 店舗展示品</a></li>
+                <li><a href="#">新潟市東区 ヘアサロン kiki 様</a></li>
               </ul><!-- /.dro-down-menu -->
             </li><!-- /.dropdown -->
           </ul><!-- /.nav -->
@@ -63,9 +63,9 @@
         <p><img class="img-responsive center-block" src="images/kv_txt.png" height="114" width="464" alt=""></p>
         <div class="text-center">
           <div class="btn-group">
-            <button type="button" class="btn btn-danger btn-lg">Accessories</button>
-            <button type="button" class="btn btn-danger btn-lg">Kiz</button>
-            <button type="button" class="btn btn-danger btn-lg">Order made</button>
+            <button type="button" class="btn btn-danger btn-lg">ｱｸｾｻﾘｰ</button>
+            <button type="button" class="btn btn-danger btn-lg">ｷｯｽﾞ</button>
+            <button type="button" class="btn btn-danger btn-lg">ｵｰﾀﾞｰﾒｲﾄﾞ</button>
           </div><!-- /.btn-group -->
         </div><!-- /.text-center -->
       </div>
@@ -73,7 +73,7 @@
 
     <div id="news" class="container" role="main">
       <section>
-        <h2 class="demo-titleType1"><i class="glyphicon glyphicon-record text-titleIcon"></i>Sale Item <span class="badge">42</span></h2>
+        <h2 class="demo-titleType1"><i class="glyphicon glyphicon-record text-titleIcon"></i>特売品 <span class="badge">8</span></h2>
         <div class="row margin-top-sm">
           <div class="margin-top-md col-sm-4 text-center">
             <p><a href="#"><img class="img-responsive center-block" src="images/sale_img.png" height="162" width="266" alt=""></a></p>
@@ -97,7 +97,7 @@
       </section>
 
       <section id="pick" class="margin-top-md">
-        <h2 class="demo-titleType1"><i class="glyphicon glyphicon-record text-titleIcon"></i>Pick Up</h2>
+        <h2 class="demo-titleType1"><i class="glyphicon glyphicon-record text-titleIcon"></i>特集</h2>
         <div class="row">
           <div class="margin-top-md col-xs-6 col-md-3"><a href="#"><img class="img-responsive center-block" src="images/pickup_bnr.png" height="124" width="263" alt=""></a></div>
           <div class="margin-top-md col-xs-6 col-md-3"><a href="#"><img class="img-responsive center-block" src="images/pickup_bnr_2.png" height="124" width="263" alt=""></a></div>
@@ -113,7 +113,7 @@
       <div class="row">
         <div class="col-xs-12 col-md-9 col-md-push-3 margin-top-md">
           <section>
-            <h2 class="demo-titleType1"><i class="glyphicon glyphicon-record text-titleIcon"></i>New Arrivals</h2>
+            <h2 class="demo-titleType1"><i class="glyphicon glyphicon-record text-titleIcon"></i>新商品</h2>
             <div id="carousel-newArrivals" class="margin-top-md carousel slide" data-ride="carousel">
               <ol class="carousel-indicators">
                 <li data-target="#carousel-newArrivals" data-slide-to="0" class="active"></li>
@@ -147,11 +147,11 @@
             </div><!-- /.row -->
           </section>
           <section class="margin-top-md">
-            <h2 class="demo-titleType1"><i class="glyphicon glyphicon-record text-titleIcon"></i>Recommend Item</h2>
+            <h2 class="demo-titleType1"><i class="glyphicon glyphicon-record text-titleIcon"></i>一押し商品</h2>
             <div class="row">
               <div class="col-xs-12 col-sm-4 margin-top-md text-center"><a href="#"><img class="img-responsive img-thumbnail" src="images/recommend_img.png" height="143" width="263" alt="" data-toggle="tooltip" data-placement="top" title="Tooltip on top"></a></div>
               <div class="col-xs-12 col-sm-7 margin-top-md">
-                <h3 class="h5">Item Name</h3>
+                <h3 class="h5">商品名</h3>
                 <p class="text-muted">牛柄 ピアス/イヤリング ¥1,100</p>
                 <button type="button" class="btn btn-warning">More <i class="glyphicon glyphicon-chevron-right text-arrowIcon"></i></button>
               </div>
@@ -159,7 +159,7 @@
             <div class="row">
               <div class="col-xs-12 col-sm-4 col-sm-push-8 margin-top-md text-center"><a href="#"><img class="img-responsive img-thumbnail" src="images/recommend_img_2.png" height="143" width="263" alt="" data-toggle="tooltip" data-placement="top" title="Tooltip on top"></a></div>
               <div class="col-xs-12 col-sm-7 col-sm-pull-4 col-sm-offset-1 margin-top-md">
-                <h3 class="h5">Item Name</h3>
+                <h3 class="h5">商品名</h3>
                 <p class="text-muted">くまさんヘアゴム ¥880</p>
                 <button type="button" class="btn btn-success">More <i class="glyphicon glyphicon-chevron-right text-arrowIcon"></i></button>
               </div>
@@ -167,8 +167,8 @@
             <div class="row">
               <div class="col-xs-12 col-sm-4 margin-top-md text-center"><a href="#"><img class="img-responsive img-thumbnail" src="images/recommend_img_3.png" height="143" width="263" alt="" data-toggle="tooltip" data-placement="top" title="Tooltip on top"></a></div>
               <div class="col-xs-12 col-sm-7 margin-top-md">
-                <h3 class="h5">Item Name</h3>
-                <p class="text-muted">Gold X Cube ピアス/イヤリング ¥1,320</p>
+                <h3 class="h5">商品名</h3>
+                <p class="text-muted">ゴールドキューブ ピアス/イヤリング ¥1,320</p>
                 <button type="button" class="btn btn-warning">More <i class="glyphicon glyphicon-chevron-right text-arrowIcon"></i></button>
               </div>
             </div><!-- /.row -->
@@ -176,38 +176,38 @@
         </div>
         <div class="col-xs-12 col-md-3 col-md-pull-9 margin-top-md">
           <nav>
-            <h2 class="demo-titleType1"><i class="glyphicon glyphicon-list text-titleIcon"></i>Category</h2>
+            <h2 class="demo-titleType1"><i class="glyphicon glyphicon-list text-titleIcon"></i>カテゴリー</h2>
             <div class="demo-sideNav list-group">
-              <a href="#" class="list-group-item">accessories <i class="glyphicon glyphicon-chevron-right text-arrowIcon"></i></a>
-              <a href="#" class="list-group-item">kiz accessories <i class="glyphicon glyphicon-chevron-right text-arrowIcon"></i></a>
-              <a href="#" class="list-group-item">order made items <i class="glyphicon glyphicon-chevron-right text-arrowIcon"></i></a>
-              <a href="#" class="list-group-item">Unique item <i class="glyphicon glyphicon-chevron-right text-arrowIcon"></i></a>
-              <a href="#" class="list-group-item">Children also covered <i class="glyphicon glyphicon-chevron-right text-arrowIcon"></i></a>
-              <a href="#" class="list-group-item">Anti-allergy <i class="glyphicon glyphicon-chevron-right text-arrowIcon"></i></a>
-              <a href="#" class="list-group-item">Focus on earrings <i class="glyphicon glyphicon-chevron-right text-arrowIcon"></i></a>
-              <a href="#" class="list-group-item">Strap <i class="glyphicon glyphicon-chevron-right text-arrowIcon"></i></a>
-              <a href="#" class="list-group-item">Key holder <i class="glyphicon glyphicon-chevron-right text-arrowIcon"></i></a>
+              <a href="#" class="list-group-item">アクセサリー <i class="glyphicon glyphicon-chevron-right text-arrowIcon"></i></a>
+              <a href="#" class="list-group-item">キッズアクセサリー <i class="glyphicon glyphicon-chevron-right text-arrowIcon"></i></a>
+              <a href="#" class="list-group-item">オーダーメイド <i class="glyphicon glyphicon-chevron-right text-arrowIcon"></i></a>
+              <a href="#" class="list-group-item">一点もの商品 <i class="glyphicon glyphicon-chevron-right text-arrowIcon"></i></a>
+              <a href="#" class="list-group-item">お子様向け商品 <i class="glyphicon glyphicon-chevron-right text-arrowIcon"></i></a>
+              <a href="#" class="list-group-item">アレルギー予防アイテム <i class="glyphicon glyphicon-chevron-right text-arrowIcon"></i></a>
+              <a href="#" class="list-group-item">イヤリング <i class="glyphicon glyphicon-chevron-right text-arrowIcon"></i></a>
+              <a href="#" class="list-group-item">携帯ストラップ <i class="glyphicon glyphicon-chevron-right text-arrowIcon"></i></a>
+              <a href="#" class="list-group-item">キーホルダー <i class="glyphicon glyphicon-chevron-right text-arrowIcon"></i></a>
             </div>
-            <h2 class="demo-titleType1 margin-top-sm"><i class="glyphicon glyphicon-heart text-titleIcon"></i>Pick Up</h2>
+            <h2 class="demo-titleType1 margin-top-sm"><i class="glyphicon glyphicon-heart text-titleIcon"></i>特集</h2>
             <div class="demo-sideNav list-group">
-              <a href="#" class="list-group-item">Sale <span class="badge">14</span></a>
-              <a href="#" class="list-group-item">Recommend <span class="badge">14</span></a>
-              <a href="#" class="list-group-item">New Items <span class="badge">14</span></a>
+              <a href="#" class="list-group-item">セール品 <span class="badge">3</span></a>
+              <a href="#" class="list-group-item">一押し商品 <span class="badge">4</span></a>
+              <a href="#" class="list-group-item">新商品 <span class="badge">7</span></a>
             </div>
             <div class="list-group margin-top-md">
-              <a href="#" class="list-group-item"><i class="glyphicon glyphicon-user text-imgIcon"></i>　Login</a>
-              <a href="#" class="list-group-item"><i class="glyphicon glyphicon-envelope text-imgIcon"></i>　Mail Magazine</a>
-              <a href="#" class="list-group-item"><i class="glyphicon glyphicon-search text-imgIcon"></i>　Shop Search</a>
-              <a href="#" class="list-group-item"><i class="glyphicon glyphicon-comment text-imgIcon"></i>　Contact</a>
-              <a href="#" class="list-group-item"><i class="glyphicon glyphicon-question-sign text-imgIcon"></i>　Help</a>
+              <a href="#" class="list-group-item"><i class="glyphicon glyphicon-user text-imgIcon"></i>　ログイン</a>
+              <a href="#" class="list-group-item"><i class="glyphicon glyphicon-envelope text-imgIcon"></i>　メールマガジン</a>
+              <a href="#" class="list-group-item"><i class="glyphicon glyphicon-search text-imgIcon"></i>　ショップ検索</a>
+              <a href="#" class="list-group-item"><i class="glyphicon glyphicon-comment text-imgIcon"></i>　コンタクト</a>
+              <a href="#" class="list-group-item"><i class="glyphicon glyphicon-question-sign text-imgIcon"></i>　質問</a>
             </div>
           </nav>
         </div>
       </div><!-- /.row -->
     </div><!-- /.container -->
 
-    <div class="demo-btnPagetop margin-top-md">
-      <a href="#header" class="center-block text-center"><i class="glyphicon glyphicon-chevron-up center-block"></i>Page Top</a>
+    <!-- <div class="demo-btnPagetop margin-top-md"> -->
+      <!-- <a href="#header" class="center-block text-center"><i class="glyphicon glyphicon-chevron-up center-block"></i>Page Top</a> -->
     </div><!-- /.demo-btnPagetop -->
 
     <footer class="demo-footer" role="contentinfo">
